@@ -33,7 +33,7 @@ public class YahooFinanceScraper implements Scraper {
             Document document = connection.get();
 
             Elements parsingDivs = document.getElementsByAttributeValue("data-test", "historical-prices");
-            Element tablesElement = parsingDivs.getFirst();
+            Element tablesElement = parsingDivs.get(0);
 
             Element tbody = tablesElement.children().get(1);
             List<Dividend> dividendList = new ArrayList<>();
@@ -52,12 +52,9 @@ public class YahooFinanceScraper implements Scraper {
                 if (month < 0) {
                     throw new RuntimeException("Unexpected Month enum value -> " + splits[0]);
                 }
-                dividendList.add(Dividend.builder()
-                        .date(LocalDateTime.of(year, month, day, 0, 0))
-                        .dividend(dividend)
-                        .build());
-
-
+                dividendList.add(
+                        new Dividend(LocalDateTime.of(year, month, day, 0, 0), dividend)
+                );
             }
             scrapResult.setDividends(dividendList);
 
@@ -75,13 +72,10 @@ public class YahooFinanceScraper implements Scraper {
         try {
             Document document = Jsoup.connect(url).get();
 
-            Element titleEle = document.getElementsByTag("h1").getFirst();
+            Element titleEle = document.getElementsByTag("h1").get(0);
 
             String title = titleEle.text().split("\\(")[0].trim();
-            return Company.builder()
-                    .ticker(ticker)
-                    .name(title)
-                    .build();
+            return new Company(ticker, title);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
